# mama-plugin-api

./: CMakeLists.txt  LICENSE.md  README.md  conanfile.txt
cmake/: MamaPluginAPIConfig.cmake.in
examples/ExampleParticleAnalyzer/: CMakeLists.txt
examples/ExampleParticleAnalyzer/resources/: manifest.json
examples/ExampleParticleAnalyzer/src/: ExampleParticleAnalyzer.cpp
include/mama/: IDictionary.h  IParticle.h  IParticleAnalyzer.h  IRuler.h
src/: IDictionary.cpp  IParticle.cpp  IParticleAnalyzer.cpp  IRuler.cpp
